# sdvcommframework

./: CMakeLists.txt  ReadMe.md
comms_stack/: CMakeLists.txt
comms_stack/include/: communication_manager.h  my_sample_rpc_impl.h  publisher.h  rpc_client.h  rpc_service.h  subscriber.h
comms_stack/protos/: common_messages.proto  sample_rpc_service.proto
comms_stack/src/: communication_manager.cpp  my_sample_rpc_impl.cpp  publisher.cpp  rpc_client.cpp  rpc_service.cpp  subscriber.cpp
comms_stack_jni/: jni_bridge.cpp
tests/: publisher_test.cpp  rpc_client_test.cpp  rpc_server_test.cpp  subscriber_test.cpp
tests/app/: build.gradle
tests/app/src/main/cpp/: CMakeLists.txt
tests/app/src/main/java/com/example/commsstackapp/: CommsStackBridge.java  MainActivity.java
tests/app/src/main/res/layout/: activity_main.xml
vsomeip_config/: vsomeip_host.json
